<?xml version="1.0"?>
<package>
  <name>ace_uss</name>
  <version>0.0.0</version>
  <description>This node acts as the ROS interface for USS</description>
  <maintainer email="chrissunny94@gmail.com">Chris Sunny Thaliyath</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>socketcan_interface</build_depend>
  <build_depend>can_msgs</build_depend>
    <build_depend>ackermann_msgs</build_depend>
  


  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>socketcan_interface</run_depend>
  <run_depend>can_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  

  <export>
  </export>
</package>
